compiler/src/snapshots/tests__tokenize_identifers.snap
---
source: compiler/src/tokenizer.rs
expression: hello world
---
Ok(
    [
        Identifier {
            line: 0,
            col: 0,
            value: [
                104,
                101,
                108,
                108,
                111,
            ],
        },
        Identifier {
            line: 0,
            col: 6,
            value: [
                119,
                111,
                114,
                108,
                100,
            ],
        },
    ],
    {},
)
