compiler/src/snapshots/tests__tokenize_import_multiple.snap
---
source: compiler/src/tokenizer.rs
expression: "use path/to/module\nuse another-module"
---
Ok(
    (
        [
            KeywordUse(
                0,
                3,
            ),
            ImportPath(
                4,
                18,
            ),
            LineBreak(
                18,
                19,
            ),
            KeywordUse(
                19,
                22,
            ),
            ImportPath(
                23,
                37,
            ),
        ],
        {},
    ),
)
