compiler/src/snapshots/tests__tokenize_import_with_let.snap
---
source: compiler/src/tokenizer.rs
expression: "use thing\nlet x = 47"
---
Ok(
    (
        [
            KeywordUse(
                0,
                3,
            ),
            ImportPath(
                4,
                9,
            ),
            LineBreak(
                9,
                10,
            ),
            KeywordLet(
                10,
                13,
            ),
            Identifier(
                14,
                15,
            ),
            Equals(
                16,
                17,
            ),
            DecimalDigits(
                18,
                20,
            ),
        ],
        {},
    ),
)
