compiler/src/snapshots/tests__tokenize_unexpected.snap
---
source: compiler/src/tokenizer.rs
expression: (@$@)
---
Ok(
    [
        LeftParen {
            start: 0,
            end: 1,
        },
        Unexpected {
            start: 1,
            end: 2,
        },
        Unexpected {
            start: 2,
            end: 3,
        },
        Unexpected {
            start: 3,
            end: 4,
        },
        RightParen {
            start: 4,
            end: 5,
        },
    ],
    {},
)
